html skeleton. header, hero, about me, sample work, socials, and footer

--- a/index.html
+++ b/index.html
@@ -37,5 +37,46 @@
             <h2>Engineering, Design, & Tech</h2>
         </div>
     </section>
+    
+    <section id="about-me" class="intro">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">About Me</h2>
+        </div>
+        <div class="flex-row">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro tempora obcaecati exercitationem corrupti a ducimus id, dolore asperiores impedit temporibus nesciunt sunt fugiat error explicabo repellat voluptatibus deleniti molestiae quod?
+            </p>
+        </div>
+    </section>
+
+    <section id="sample-work" class="work-display">
+        <div>
+            <h2 class="section-title primary-border">Work & Projects</h2>
+        </div>
+        <div class="step">
+
+        </div>        
+    </section>
+
+    <section id="socials">
+        <div class="flex-row">
+            <h2 class="section-title primary-border">Contact Me & Socials</h2> 
+        </div>
+        <div class="contact-info">
+            <div>
+                <address>
+                    P: 123.456.7890 </br>
+                    E: <a href="mailto:stevenbmendoza@gmail.com">stevenbmendoza@gmail.com</a>
+                </address>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <h2>Made by Steven Mendoza.</h2>
+        <div>
+            <a href="#">Check out my other portfolios!</a>
+        </div>
+    </footer>
 </body>
 </html>
