style hero element, added self photo

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="hero-cta">
             <h2>Engineering, Design, & Tech</h2>
         </div>
+        <img src="./assests/images/self-photo.jpg" alt="Self portait of Steven.">
     </section>
     
     <section id="about-me" class="intro">
@@ -75,7 +76,7 @@
     <footer>
         <h2>Made by Steven Mendoza.</h2>
         <div>
-            <a href="#">Check out my other portfolios!</a>
+            <a href="#">Check out my other portfolios! (Coming Soon.)</a>
         </div>
     </footer>
 </body>
