--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
         <div>
             <h2 class="section-title primary-border">Work & Projects</h2>
         </div>
-        <div class="step">
-
+        <div class="projects">
+            <div class="project-1"></div>
+            <div class="project-2"></div>
+            <div class="project-3"></div>
+            <div class="project-4"></div>
+            <div class="project-5"></div>
         </div>        
     </section>
 
