--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <h2 class="section-title primary-border">Work & Projects</h2>
         </div>
         <div class="projects">
-            <div class="project-1"></div>
-            <div class="project-2"></div>
-            <div class="project-3"></div>
-            <div class="project-4"></div>
-            <div class="project-5"></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>        
     </section>
 
