--- a/index.html
+++ b/index.html
@@ -55,11 +55,13 @@
             <h2 class="section-title primary-border">Work & Projects</h2>
         </div>
         <div class="projects">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div id="project-1">
+                <h3>Run Buddy</h3>
+                <!-- <p>Sign-up service</p> -->
+            </div>
+            <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
+            <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
+            <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
         </div>        
     </section>
 
