format socials section, added hover and links to work section

--- a/index.html
+++ b/index.html
@@ -55,25 +55,25 @@
             <h2 class="section-title primary-border">Work & Projects</h2>
         </div>
         <div class="projects">
-            <div id="project-1">
-                <h3>Run Buddy</h3>
-                <!-- <p>Sign-up service</p> -->
-            </div>
+            <a id="project-1" href="https://smendoza94.github.io/run-buddy/" target="_blank">
+                        <h3>Run Buddy</h3>
+            </a>
             <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
             <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
             <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
         </div>        
     </section>
 
-    <section id="socials">
+    <section id="socials" class="socials">
         <div class="flex-row">
             <h2 class="section-title primary-border">Contact Me & Socials</h2> 
         </div>
-        <div class="contact-info">
+        <div class="social-info">
             <div>
                 <address>
-                    P: 123.456.7890 </br>
-                    E: <a href="mailto:stevenbmendoza@gmail.com">stevenbmendoza@gmail.com</a>
+                    P: 123.456.7890</br>
+                    E: <a href="mailto:stevenmendoza@gmail.com">stevenmendoza@gmail.com</a></br>
+                    GitHub: <a href="https://github.com/smendoza94" target="_blank">smendoza94</a>
                 </address>
             </div>
         </div>
