--- a/index.html
+++ b/index.html
@@ -55,10 +55,12 @@
             <h2 class="section-title primary-border">Work & Projects</h2>
         </div>
         <div class="projects">
-            <a id="project-1" href="https://smendoza94.github.io/run-buddy/" target="_blank">
-                        <h3>Run Buddy</h3>
+            <a id="project-1" href="https://smendoza94.github.io/run-buddy/" alt="self project client run buddy." target="_blank">
+                <h3>Run Buddy</h3>
             </a>
-            <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
+            <a id="project-2" href="https://lei11355.github.io/liquor-zip-api/" alt="Group Project using 2 API. Liquor and Zip Code Lookup." target="_blank">
+                <h3>Liquor and ZipCode Lookup</h3>
+            </a>
             <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
             <div><img src="./assests/images/coming-soon.svg" alt="Coming Soon Placeholder."></div>
         </div>        
